<resources>
    <string name="app_name">registerUI</string>
    <string name="k">Enter name</string>
    <string name="ndn">ndn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now!</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="have_account">Have Account</string>
    <string name="pref_file">com.abc.preference_file</string>
    <string name="pref_login_status">com.abc.preference_login_status</string>
    <string name="pref_user_email">com.abc.preference_user_name</string>

</resources>
