<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/test_white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                app:srcCompat="@drawable/hola"
                android:contentDescription="@string/ndn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/no_color"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="8dp"
                    android:padding="15dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"
                    tools:ignore="Autofill">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="8dp"
                    android:padding="15dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_number"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="8dp"
                    android:padding="15dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="40dp">
                <android.support.v7.widget.CardView
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/colorAccent">
                    <TextView
                        android:id="@+id/regBut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textAllCaps="true"
                        android:textSize="25sp"
                        android:paddingLeft="60dp"
                        android:paddingRight="60dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/test_white"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/no_color"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>